PaC/CEL/gatekeeper-{{Rego,CEL}}/Rego/2-1.Rego-ConstraintTemplate-NoHostPath.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: regoconstrainttemplatenohostpath 
spec:
  crd:
    spec:
      names:
        kind: RegoConstraintTemplateNoHostPath 
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package regoconstrainttemplatenohostpath 

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          input.review.object.spec.hostPath == true
          msg := "HostPath is not allowed for the pod"
        }
